--- a/res/xml/skb_idata.xml
+++ b/res/xml/skb_idata.xml
@@ -21,9 +21,9 @@
   </row>
 
   <row>
-    <key code="-6" key_type="3"  width="15.2%p" icon="@drawable/idata_icon" icon_popup="@drawable/idata_popup_icon" />
-    <key code="-301" width="35.2%p" label="@string/StartBluetooth" />
-    <key code="-302" width="35.2%p" label="@string/StopBluetooth" />
+    <key code="-6" key_type="3"  width="14.286%p" icon="@drawable/idata_icon" icon_popup="@drawable/idata_popup_icon" />
+    <key code="-301" width="35.5%p" label="@string/StartBluetooth" />
+    <key code="-302" width="35.5%p" label="@string/StopBluetooth" />
     <key id="3"/>
   </row>
 
@@ -32,7 +32,8 @@
       <toggle_state state_id="@string/toggle_en_sym1" label="英 符" code="-2"/>
     </key>
     <key code="-3" label="\?123"/>
-    <key code="62" key_type="5" width="30.608%p"/>
+    <key code="62" key_type="5" width="15.3%p"/>
+    <key code="-304" label="@string/key_cn_usb" width="15.3%p"/>
     <key label="。" key_type="0" icon="@drawable/period_full_icon"
       icon_popup="@drawable/period_full_popup_icon">
       <toggle_state state_id="@string/toggle_en_sym1" label="."
