--- a/res/xml/skb_sym1.xml
+++ b/res/xml/skb_sym1.xml
@@ -61,7 +61,8 @@
       <toggle_state state_id="@string/toggle_en_sym1" label="英 符" code="-2"/>
     </key>
     <key code="-3" key_type="3" label="\?123"/>
-    <key code="62" key_type="5" width="30.608%p"/>
+    <key code="62" key_type="5" width="15.3%p"/>
+    <key code="-304" label="@string/key_cn_usb" width="15.3%p"/>
     <key label="。" key_type="0" icon="@drawable/period_full_icon"
       icon_popup="@drawable/period_full_popup_icon">
       <toggle_state state_id="@string/toggle_en_sym1" label="."
