--- a/res/xml/skb_sym2.xml
+++ b/res/xml/skb_sym2.xml
@@ -45,7 +45,8 @@
       <toggle_state state_id="@string/toggle_en_sym2" label="英 符" code="-2"/>
     </key>
     <key code="-3" key_type="3" label="\?123"/>
-    <key code="62" key_type="5" width="30.608%p"/>
+    <key code="62" key_type="5" width="15.3%p"/>
+    <key code="-304" label="@string/key_cn_usb" width="15.3%p"/>
     <key label="……" key_type="0">
       <toggle_state state_id="@string/toggle_en_sym2" label="…"/>
     </key>
