--- a/res/layout/activity_setting_idata.xml
+++ b/res/layout/activity_setting_idata.xml
@@ -54,7 +54,7 @@
                     android:text="@string/SetFirstStep" />
 
                 <Button
-                    android:id="@+id/ButtonSetInput"
+                    android:id="@+id/bt_activation"
                     style="@style/button_yellow"
                     android:text="@string/Choose" />
             </LinearLayout>
@@ -75,7 +75,7 @@
                     android:text="@string/SetSecondStep" />
 
                 <Button
-                    android:id="@+id/ButtonOpenBlue"
+                    android:id="@+id/bt_open"
                     style="@style/button_yellow"
                     android:text="@string/Open" />
             </LinearLayout>
@@ -94,7 +94,7 @@
                     android:text="@string/SetThirdStep" />
 
                 <Button
-                    android:id="@+id/ButtonSet"
+                    android:id="@+id/bt_select"
                     style="@style/button_yellow"
                     android:text="@string/SelectBlueDevice" />
             </LinearLayout>
@@ -123,7 +123,7 @@
                         android:visibility="gone" />
 
                     <Button
-                        android:id="@+id/BtnChange"
+                        android:id="@+id/bt_change"
                         style="@style/button_yellow"
                         android:text="@string/Change" />
                 </LinearLayout>
@@ -143,7 +143,7 @@
                     android:text="@string/SetLastStep" />
 
                 <Button
-                    android:id="@+id/BtnTest"
+                    android:id="@+id/bt_test"
                     style="@style/button_yellow"
                     android:text="@string/Test" />
             </LinearLayout>
