--- a/res/layout/activity_image.xml
+++ b/res/layout/activity_image.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <ListView
-       android:id="@+id/listView"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:choiceMode="singleChoice" >
-   </ListView>
 
+    <com.idata.bluetoothime.MyImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="matrix"
+        android:src="@drawable/ic_launcher"/>
+    
 </LinearLayout>
