--- a/res/xml/skb_idata.xml
+++ b/res/xml/skb_idata.xml
@@ -15,15 +15,15 @@
   </row>
 	
   <row>
-    <key code="-306" width="29.999996%p" label="@string/Devices" />
-    <key code="-303" width="39.999996%p" label="@string/StartScan" />
-    <key code="-305" width="29.999996%p" label="@string/Function"/>
+    <key code="-306" key_type="1" width="29.999996%p" label="@string/Devices" />
+    <key code="-303" key_type="1" width="39.999996%p" label="@string/StartScan" />
+    <key code="-305" key_type="1" width="29.999996%p" label="@string/Function"/>
   </row>
 
   <row>
     <key code="-6" key_type="3"  width="14.286%p" icon="@drawable/idata_icon" icon_popup="@drawable/idata_popup_icon" />
-    <key code="-301" width="35.5%p" label="@string/StartBluetooth" />
-    <key code="-302" width="35.5%p" label="@string/StopBluetooth" />
+    <key code="-301" key_type="1" width="35.5%p" label="@string/StartBluetooth" />
+    <key code="-302" key_type="1" width="35.5%p" label="@string/StopBluetooth" />
     <key id="3"/>
   </row>
 
