--- a/res/xml/skb_idata.xml
+++ b/res/xml/skb_idata.xml
@@ -21,7 +21,7 @@
   </row>
 
   <row>
-    <key code="-6" key_type="3"  width="14.286%p" icon="@drawable/idata_icon" icon_popup="@drawable/idata_popup_icon" />
+    <key code="-6" key_type="3"  width="14.286%p" icon="@drawable/smiley_icon" icon_popup="@drawable/smiley_popup_icon" />
     <key code="-301" key_type="1" width="35.5%p" label="@string/StartBluetooth" />
     <key code="-302" key_type="1" width="35.5%p" label="@string/StopBluetooth" />
     <key id="3"/>
